# RAG-SERVER-2026

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.agents/skills/docker-expert/: SKILL.md
.agents/skills/fastapi-templates/: SKILL.md
.agents/skills/odyssey-rag-patterns/: SKILL.md
.agents/skills/qa-verification-gate/: SKILL.md
.agents/skills/rag-implementation/: SKILL.md
.claude/docs/: odyssey-rag-descripcion.md
.squad/decisions/inbox/: hockney-s3-s4.md  keyser-s1-s2-s8.md
IAContext/: API_REFERENCE.md  ARCHITECTURE.md  CONVENTIONS.md  DATA_MODEL.md  DOCKER_SETUP.md  EVALUATION_SET.md  INGESTION_PIPELINE.md  MCP_TOOLS.md  PLAN.md  RETRIEVAL_ENGINE.md  SECURITY.md  TESTING_STRATEGY.md  UI.md
alembic/: README.md  env.py
alembic/versions/: 001_baseline_schema.py  002_source_type_rules.py
data/sources/: README.md
db/init/: 001_extensions.sql  002_schema.sql  003_seed_config.sql
db/migrations/: 004_admin_users.sql  005_mcp_tokens.sql  006_seed_admin_user.sql
scripts/: migrate.py  seed_admin.py  seed_initial_sources.py  test_mcp.py
src/odyssey_rag/: __init__.py  config.py  exceptions.py  job_resilience.py  main.py  maintenance.py  observability.py
src/odyssey_rag/api/: __init__.py  auth.py  deps.py  errors.py  main.py
src/odyssey_rag/api/routes/: admin.py  audit.py  auth.py  categories.py  chunks.py  feedback.py  gc.py  ingest.py  jobs.py  search.py  sources.py  stats.py  tokens.py  upload.py
src/odyssey_rag/api/schemas/: __init__.py
src/odyssey_rag/db/: __init__.py  models.py  session.py
src/odyssey_rag/db/repositories/: chunks.py  documents.py  embeddings.py  feedback.py  ingest_jobs.py  source_type_rules.py
src/odyssey_rag/embeddings/: __init__.py  factory.py  nomic.py  openai_provider.py  provider.py
src/odyssey_rag/ingestion/: __init__.py  categorizer.py  pipeline.py
src/odyssey_rag/llm/: __init__.py  anthropic_provider.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider.py
src/odyssey_rag/mcp_server/: __init__.py  auth_middleware.py  main.py  server.py
src/odyssey_rag/retrieval/: __init__.py  bm25_search.py  cache.py  engine.py  fusion.py  query_processor.py  reranker.py  response_builder.py  tool_strategies.py  vector_search.py
tests/: conftest.py
tests/evaluation/: evaluation_questions.json  test_evaluation_suite.py
tests/fixtures/: sample_annex_b.md  sample_document.docx  sample_generic.md  sample_pacs008.xml  sample_php.php  sample_postman.postman_collection.json
tests/integration/: test_api_endpoints.py  test_mcp_server.py
tests/unit/: test_categorizer.py  test_job_resilience.py  test_observability.py
tests/unit/test_api/: test_documents.py  test_health.py  test_ingest.py  test_search.py
tests/unit/test_chunkers/: test_chunkers.py
tests/unit/test_db/: test_garbage_collection.py  test_repositories.py
tests/unit/test_embeddings/: test_provider.py
tests/unit/test_metadata/: test_extractor.py
tests/unit/test_parsers/: create_docx_fixture.py  test_docx_parser.py  test_markdown_parser.py  test_php_parser.py  test_postman_parser.py  test_xml_parser.py
tests/unit/test_retrieval/: test_cache.py  test_engine.py  test_fusion.py  test_query_processor.py  test_response_builder.py  test_tool_strategies.py
web/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/src/: middleware.ts
web/src/__tests__/: api-client.test.ts  utils.test.ts
web/src/app/: globals.css  layout.tsx
web/src/components/: command-palette.tsx  empty-state.tsx  skeleton.tsx  theme-provider.tsx
web/src/lib/: api-client.ts  auth.ts
web/src/types/: api.ts
web/tests/e2e/: auth.spec.ts  navigation.spec.ts
(+67 files in other folders)
