[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "odyssey-rag"
version = "0.1.0"
description = "Knowledge retrieval system for ISO 20022/IPS documentation"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Odyssey Team"},
]
readme = "README.md"

dependencies = [
    # Web Framework
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "pgvector>=0.3.0,<1.0.0",
    
    # Embeddings & ML
    "sentence-transformers>=2.6.0,<4.0.0",
    "torch>=2.0.0",
    "numpy>=1.26.0,<3.0.0",
    
    # LLM Providers
    "langchain>=0.2.0,<1.0.0",
    "langchain-openai>=0.1.0,<1.0.0",
    "langchain-anthropic>=0.1.0,<1.0.0",
    "langchain-google-genai>=1.0.0,<3.0.0",
    
    # RAG Framework
    "llama-index>=0.10.0,<1.0.0",
    
    # MCP Server
    "mcp>=1.0.0,<2.0.0",
    
    # Configuration
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    
    # Logging
    "structlog>=24.0.0,<26.0.0",
    
    # HTTP Client
    "httpx>=0.25.0,<1.0.0",
    
    # Document Parsing
    "pdfplumber>=0.10.0,<1.0.0",
    "pypdf>=3.0.0,<6.0.0",
    
    # Migrations
    "alembic>=1.13.0,<2.0.0",

    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "tiktoken>=0.5.0,<1.0.0",

    # Caching
    "cachetools>=5.3.0,<6.0.0",

    # Observability
    "prometheus-client>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "ruff>=0.3.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "types-setuptools",
    "httpx>=0.25.0",
]

# ── Ruff Configuration ─────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "S",    # bandit (security)
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",   # Allow assert in tests
    "A003",   # Allow shadowing Python builtins in class attributes (id, type)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["odyssey_rag"]

# ── MyPy Configuration ─────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "pgvector.*",
    "llama_index.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "mcp.*",
    "pdfplumber.*",
    "tiktoken.*",
    "structlog.*",
]
ignore_missing_imports = true

# ── Pytest Configuration ────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires DB/services)",
    "evaluation: Evaluation suite tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ── Coverage ────────────────────────────────────────────
[tool.coverage.run]
source = ["src/odyssey_rag"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
